--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.4.0",
     "@shopify/shopify-app-session-storage-prisma": "^5.1.5",
+    "is-ip": "5.0.1",
     "isbot": "^5.1.0",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "7.0.0",
+    "react-router-dom": "7.0.0",
+    "remix-utils": "8.0.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
