--- a/shopify.app.prod.toml
+++ b/shopify.app.prod.toml
@@ -3,8 +3,8 @@
 client_id = "928e7406d863aa5f54d20d7d2906ae0a"
 application_url = "https://shopify-b2b-leads.glowsoft.de"
 embedded = true
-name = "B2B Leads Staging"
-handle = "b2b-leads-staging"
+name = "B2B Leads"
+handle = "b2b-leads"
 
 [webhooks]
 api_version = "2025-01"
