--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,6 @@ services:
       - PORT=3000
       - SHOPIFY_APP_URL=${SHOPIFY_APP_URL}
       - SHOPIFY_API_KEY=${SHOPIFY_API_KEY}
-      - SHOPIFY_MY_WEB_PIXEL_ID=${SHOPIFY_MY_WEB_PIXEL_ID}
+      - SHOPIFY_API_SECRET=${SHOPIFY_API_SECRET}
       - SCOPES=${SCOPES}
+      - SHOPIFY_MY_WEB_PIXEL_ID=${SHOPIFY_MY_WEB_PIXEL_ID}
