--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
         required: true
         type: string
     secrets:
+      SHOPIFY_API_KEY:
+        required: true
+      SHOPIFY_API_SECRET:
+        required: true
       SSH_HOST:
         required: true
       SSH_USERNAME:
@@ -38,10 +42,12 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Setup Shopify CLI
+        run: npm install -g @shopify/cli@latest
       - name: Set Shopify app config
         run: shopify app config use ${{ inputs.environment }}
       - name: Deploy Shopify app
-        run: shopify app deploy
+        run: shopify app deploy --force
       - name: Deploy using SSH
         uses: appleboy/ssh-action@v0.1.4
         with:
