--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,9 @@ jobs:
         run: npm install -g @shopify/cli@latest
       - name: Set Shopify app config
         run: shopify app config use ${{ inputs.environment }}
+        env:
+          SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
+          SHOPIFY_API_SECRET: ${{ secrets.SHOPIFY_API_SECRET }}
       - name: Deploy Shopify app
         run: shopify app deploy --force
         env:
