--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Setup Shopify CLI
         run: npm install -g @shopify/cli@latest
       - name: Set Shopify app config
-        run: shopify app config use ${{ inputs.environment }}
+        run: shopify app config use ${{ inputs.environment }} --force
         env:
           SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
           SHOPIFY_API_SECRET: ${{ secrets.SHOPIFY_API_SECRET }}
