--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,16 +44,12 @@ jobs:
         run: npm run build
       - name: Setup Shopify CLI
         run: npm install -g @shopify/cli@latest
-      - name: Set Shopify app config
-        run: shopify app config use ${{ inputs.environment }} --force
-        env:
-          SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
-          SHOPIFY_API_SECRET: ${{ secrets.SHOPIFY_API_SECRET }}
       - name: Deploy Shopify app
-        run: shopify app deploy --force
+        run: shopify app deploy -f --source-control-url "$COMMIT_URL"
         env:
           SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
-          SHOPIFY_API_SECRET: ${{ secrets.SHOPIFY_API_SECRET }}
+          SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_API_SECRET }}
+          COMMIT_URL: ${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}
       - name: Deploy using SSH
         uses: appleboy/ssh-action@v0.1.4
         with:
