--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Node.js
         uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
       - name: Install npm dependencies
         run: npm ci
       - name: Build
@@ -45,7 +48,7 @@ jobs:
       - name: Setup Shopify CLI
         run: npm install -g @shopify/cli@latest
       - name: Deploy Shopify app
-        run: shopify app deploy -f -c ${{ inputs.environment }} --source-control-url "$COMMIT_URL"
+        run: shopify app deploy -c ${{ inputs.environment }} -f --source-control-url "$COMMIT_URL"
         env:
           SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
           SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
