--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
           cache: 'npm'
       - name: Install npm dependencies
         run: npm ci
@@ -48,7 +48,7 @@ jobs:
       - name: Setup Shopify CLI
         run: npm install -g @shopify/cli@latest
       - name: Deploy Shopify app
-        run: shopify app deploy -c ${{ inputs.environment }} -f --source-control-url "$COMMIT_URL"
+        run: shopify app deploy -c ${{ inputs.environment }} --force --source-control-url "$COMMIT_URL"
         env:
           SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
           SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
