--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,13 @@ jobs:
         run: npm run build
       - name: Setup Shopify CLI
         run: npm install -g @shopify/cli@latest
+      - name: Copy app config
+        uses: canastro/copy-file-action@master
+        with:
+          source: shopify.app.${{ inputs.environment }}.toml
+          target: shopify.app.toml
       - name: Deploy Shopify app
-        run: shopify app deploy -c ${{ inputs.environment }} --force --source-control-url "$COMMIT_URL"
+        run: shopify app deploy -f --source-control-url "$COMMIT_URL"
         env:
           SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
           SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
