--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
     secrets:
       SHOPIFY_API_KEY:
         required: true
-      SHOPIFY_API_SECRET:
+      SHOPIFY_CLI_PARTNERS_TOKEN:
         required: true
       SSH_HOST:
         required: true
@@ -38,22 +38,14 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Node.js
         uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
       - name: Install npm dependencies
         run: npm ci
       - name: Build
         run: npm run build
       - name: Setup Shopify CLI
         run: npm install -g @shopify/cli@latest
-      - name: Copy app config
-        uses: canastro/copy-file-action@master
-        with:
-          source: shopify.app.${{ inputs.environment }}.toml
-          target: shopify.app.toml
       - name: Deploy Shopify app
-        run: shopify app deploy -f --source-control-url "$COMMIT_URL"
+        run: shopify app deploy -f -c ${{ inputs.environment }} --source-control-url "$COMMIT_URL"
         env:
           SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
           SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
