--- a/shopify.app.development.toml
+++ b/shopify.app.development.toml
@@ -1,10 +1,10 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "928e7406d863aa5f54d20d7d2906ae0a"
-application_url = "https://parker-wife-vendor-subaru.trycloudflare.com"
+application_url = "https://localhost:3000"
 embedded = true
-name = "B2B Leads PoC"
-handle = "b2b-leads-poc"
+name = "B2B Leads Development"
+handle = "b2b-leads-development"
 
 [webhooks]
 api_version = "2025-01"
@@ -23,9 +23,9 @@ scopes = "write_products,write_pixels,read_customer_events"
 
 [auth]
 redirect_urls = [
-  "https://parker-wife-vendor-subaru.trycloudflare.com/auth/callback",
-  "https://parker-wife-vendor-subaru.trycloudflare.com/auth/shopify/callback",
-  "https://parker-wife-vendor-subaru.trycloudflare.com/api/auth/callback"
+  "https://localhost:3000/auth/callback",
+  "https://localhost:3000/auth/shopify/callback",
+  "https://localhost:3000/api/auth/callback"
 ]
 
 [pos]
