--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.4",
     "typescript": "^5.2.2",
-    "vite": "^5.1.3",
-    "vite-plugin-mkcert": "1.17.6"
+    "vite": "^5.1.3"
   },
   "workspaces": [
     "extensions/*"
