--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,20 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV}
       - PORT=3000
+      - DATABASE_URL=${DATABASE_URL}
       - SHOPIFY_APP_URL=${SHOPIFY_APP_URL}
       - SHOPIFY_API_KEY=${SHOPIFY_API_KEY}
       - SHOPIFY_API_SECRET=${SHOPIFY_API_SECRET}
       - SCOPES=${SCOPES}
       - SHOPIFY_MY_WEB_PIXEL_ID=${SHOPIFY_MY_WEB_PIXEL_ID}
+  db:
+    image: postgres
+    ports:
+      - ${DATABASE_PORT}:5432
+    restart: always
+    environment:
+      - POSTGRES_DB=${DATABASE_NAME}
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+    volumes:
+      - ./data:/var/lib/postgresql/data # persist data
