--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": "^18.20 || ^20.10 || >=21.0.0"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "6.3.1",
     "@prisma/client": "^5.11.0",
     "@remix-run/dev": "^2.7.1",
     "@remix-run/fs-routes": "^2.15.0",
@@ -36,6 +37,7 @@
     "@shopify/shopify-app-session-storage-prisma": "^5.1.5",
     "is-ip": "5.0.1",
     "isbot": "^5.1.0",
+    "pg": "8.13.1",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,6 +52,7 @@
     "@shopify/api-codegen-preset": "^1.1.1",
     "@types/eslint": "^8.40.0",
     "@types/node": "^22.2.0",
+    "@types/pg": "8.11.11",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "eslint": "^8.42.0",
