set api url in pixel settings

--- a/extensions/web-pixel/shopify.extension.toml
+++ b/extensions/web-pixel/shopify.extension.toml
@@ -1,6 +1,5 @@
-name = "my-web-pixel"
+name = "b2b-leads-web-pixel"
 type = "web_pixel_extension"
-
 
 runtime_context = "strict"
 
@@ -13,10 +12,8 @@ sale_of_data = "enabled"
 [settings]
 type = "object"
 
-[settings.fields.accountID]
-name = "Account ID"
-description = "Account ID"
+[settings.fields.apiURL]
+name = "API URL"
+description = "The URL of the B2B Leads API"
 type = "single_line_text_field"
-validations =  [
-  { name = "min", value = "1" }
-]
+validations =  []
