--- a/extensions/web-pixel/package.json
+++ b/extensions/web-pixel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-web-pixel",
+  "name": "b2b-leads-web-pixel",
   "version": "1.0.0",
   "main": "dist/main.js",
   "license": "UNLICENSED",
