--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.4.0",
     "@shopify/shopify-app-session-storage-prisma": "^5.1.5",
+    "axios": "1.7.9",
     "cache-manager": "6.4.0",
     "is-ip": "5.0.1",
     "isbot": "^5.1.0",
