--- a/template.env
+++ b/template.env
@@ -12,3 +12,5 @@ SHOPIFY_API_KEY=
 SHOPIFY_API_SECRET=
 SCOPES=read_customer_events,write_pixels,write_products
 SHOPIFY_MY_WEB_PIXEL_ID=
+
+DEV_STORE_URL=
